Update Yavuz Sultan Selim image source and comment

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     </button>
                 </div>
             </div>
-            <!-- Yavuz Sultan Selim Portresi -->
+            <!-- Yavuz Sultan Selim Portresi (Güncellendi) -->
             <div class="md:w-2/5 mt-10 md:mt-0 flex justify-center">
-                <img src="https://placehold.co/350x450/8b5cf6/ffffff?text=Yavuz+Sultan+Selim"
+                <img src="https://raw.githubusercontent.com/iguner00-web/yavuzslm/main/src/Yavuzsultan.jpg"
                      alt="Yavuz Sultan Selim Portresi"
                      class="rounded-xl shadow-2xl border-4 border-osmanli w-full max-w-xs transition duration-500 ease-in-out transform hover:rotate-3"
                      onerror="this.onerror=null; this.src='https://placehold.co/350x450/4f46e5/ffffff?text=Portre+Yüklenemedi';"
